--- a/src/sass/shared/viewtask.scss
+++ b/src/sass/shared/viewtask.scss
@@ -2,7 +2,7 @@
 
 .view-task {
   background-color: $white;
-  width: min(90%, 480px);
+  width: min(95%, 480px);
   padding: $spacer;
   border-radius: 6px;
 
